<resources>
    <string name="app_name">天天音乐</string>
    <string name="scan_finish">扫描完成</string>
    <string name="scan_finish_no_music">本地没有歌曲，快去下载吧</string>
    <string name="scanning_music_count_tv">已扫描到 %s 首歌曲</string>
    <string name="scan_error">扫描失败</string>
    <string name="custom_music">自建歌单</string>
    <string name="local_music">本地音乐</string>
    <string name="recent_music">最近音乐</string>

    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲循环</string>
    <string name="play_mode_sequence">顺序播放</string>
    <string name="no_file_try_again">歌曲文件不存在，请重新扫描</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email(登录不需要填写)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register">马上注册</string>
    <string name="username_cant_null">用户名不能为空!</string>
    <string name="password_cant_null">密码不能为空!</string>
    <string name="pwd_not_confirm">密码和确认密码不匹配!</string>
    <string name="email_cant_null">邮箱地址不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="item_index">1</string>
    <string name="music_name">music namemusic namemusic namemusic namemusic namemusic namemusic namemusic name</string>
    <string name="singer_name">singer name</string>
    <string name="play_music_error">歌曲播放失败</string>
    <string name="singer_count_album_count">%s 张专辑 | %s 首歌曲</string>
    <string name="pullRefresh">下拉刷新</string>
    <string name="app_splash_name">天天音乐</string>
    <string name="delete_music">删除</string>
    <string name="cancle">取消</string>
    <string name="home_page_name">主页</string>
    <string name="search_page_name">发现</string>
    <string name="me_page_name">我的</string>
    <string name="error_connection">网络连接异常，请稍后重试！</string>
    <string name="default_num">0 首</string>
</resources>