<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/local_music_item"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:swipeEnable="true">

        <TextView
        android:id="@+id/local_item_index"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/item_index"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/local_item_iv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_music_item"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:visibility="visible"
            />
    </FrameLayout>


        <TextView
        android:id="@+id/local_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/music_name"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toRightOf="@+id/local_item_index"
        app:layout_constraintRight_toLeftOf="@+id/local_item_love_fl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/local_music_singer"
        />

        <TextView
            android:id="@+id/local_music_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/singer_name"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toRightOf="@+id/local_item_index"
            app:layout_constraintTop_toBottomOf="@+id/local_item_name"
            app:layout_constraintRight_toLeftOf="@+id/local_item_love_fl"
            app:layout_constraintBottom_toBottomOf="parent"
            />
<LinearLayout
    android:id="@+id/local_item_love_fl"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:padding="13dp"
    android:layout_marginEnd="30dp"
    android:gravity="center"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/local_item_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_no_love"

        />
</LinearLayout>


        <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_weight="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>