<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_local_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/local_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/local_music"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/local_iv"
                app:layout_constraintLeft_toRightOf="@id/local_iv"
                app:layout_constraintTop_toTopOf="@id/local_iv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/gray_e7"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@id/home_local_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/home_recent_layout"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_recent_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_local_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/recent_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_clock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/recent_music"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/recent_iv"
                app:layout_constraintLeft_toRightOf="@id/recent_iv"
                app:layout_constraintTop_toTopOf="@id/recent_iv" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/home_divider"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/divider_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_recent_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_custom_music_cl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/home_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <TextView
                android:id="@+id/home_custom_music_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/custom_music"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/home_custom_music_tv"
                app:layout_constraintRight_toLeftOf="@+id/home_custom_music_add_iv"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_custom_music_add_iv"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_add"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/home_custom_music_right_iv"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_custom_music_right_iv"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_custom_music_cl"
            app:layout_constraintBottom_toTopOf="@id/fragment_play_bar"
            />

        <FrameLayout
            android:id="@+id/fragment_play_bar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>